@@ -35,6 +35,9 @@
     <string name="ordinal_number">%1$d%2$s</string>
     <!-- 1=OrdinalNumber, 2=Season, e.g.: {48th} day of {Winter} -->
     <string name="day_of_season">%1$s dag van de %2$s</string>
+    <string name="good_morning">GOEIEMORGEN</string>
+    <string name="good_day">GENIET VAN JE DAG!</string>
+    <string name="good_evening">FIJNE AVOND :)</string>
     <string name="wake_up">WAKKER WORDEN</string>
     <string name="get_up">OPSTAAN</string>
     <string name="shower">DOUCHEN</string>
